# Smith

./: .travis.yml  Cargo.toml  LICENSE  README.md
assets/: gruvbox.themedump  gruvbox.tmTheme
src/: command.rs  macros.rs  main.rs  text.rs  view.rs
src/command/: mod.rs  select.rs
src/data/: mod.rs  text.rs
src/data/record/: action.rs  mod.rs
src/data/select/: mod.rs
src/state/: mod.rs  recorded.rs  text.rs
src/state/record/: action.rs  mod.rs
src/state/recorded/: action.rs  mod.rs
src/state/select/: mod.rs
src/view/: mod.rs  screen.rs
