[package]
name = "smith"
version = "1.2.2"
authors = ["IGI-111 <igi.222@gmail.com>"]
description = "Smith is a simple terminal-based text editor written in Rust."
repository = "https://github.com/IGI-111/Smith"
keywords = [ "text", "editor", "terminal", "termion" ]
license = "MIT"

[dependencies]
clipboard = "0.5"
ropey = "1.0.0"
termion = "1.5.1"
unicode-width = "0.1.5"
unicode-segmentation = "1.2.1"
delegate = "0.1.3"
syntect = "3.0.2"
ndarray = "0.12"
