[package]
name = "smith"
version = "1.3.0"
authors = ["IGI-111 <igi.222@gmail.com>"]
description = "Smith is a simple terminal-based text editor written in Rust."
repository = "https://github.com/IGI-111/Smith"
keywords = [ "text", "editor", "terminal", "termion" ]
license = "MIT"
edition = "2018"

[dependencies]
clipboard = "0.5.0"
ropey = "1.1.0"
termion = "1.5.5"
unicode-width = "0.1.7"
unicode-segmentation = "1.6.0"
delegate = "0.4.0"
syntect = "3.3.0"
ndarray = "0.13.0"
